--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Model and Dataset
+raw_dataset/
+sup-simcse-roberta-large/
+preprocessed_data/
+clustered_dataset/
